[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/dialogue/DialogBox.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="DialogueLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" parent="DialogueLayer" instance=ExtResource( 3 )]
pause_mode = 2
